--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/blob": "^1.1.1",
     "@vercel/kv": "^3.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
